--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -277,7 +277,11 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, SITE_H1, INTRO_H2, TEXT_BL
 							"addressLocality": "London",
 							"postalCode": "EC1M 4NH",
 							"addressCountry": "UK"
-						}
+							}
+						},
+						"author": {
+							"@type": "Organization",
+							"name": "The Clean Network"
 						},
 						"publisher": {
 						"@type": "Organization",
