--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -84,15 +84,14 @@ import { JOBS_TITLE, JOBS_DESCRIPTION, JOBS_KEYWORDS, JOBS_H1, JOBS_TEXT_BODY } 
                 "industry": "Corporate Cleaning",
                 "employmentType": "CONTRACTOR",
                 "datePosted": "2023-07-24",
-                "validThrough": "",
                 "jobLocation": {
                     "@type": "Place",
                     "address": {
-                    "@type": "PostalAddress",
-                    "streetAddress": "",
-                    "addressLocality": "London",
-                    "postalCode": "",
-                    "addressCountry": ""
+                        "@type": "PostalAddress",
+                        "streetAddress": "6-8 Knights Court",
+                        "addressLocality": "London",
+                        "postalCode": "EC1M 4NH",
+                        "addressCountry": "UK"
                     }
                 }
                 }}
