--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -107,7 +107,8 @@ import { SITE_KEYWORDS, SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SE
                 ],
                 "address": {
 					"@type": "PostalAddress",
-					"streetAddress": "EC1M 4NH",
+					"streetAddress": "6-8 Knights Court",
+                    "postalCode": "EC1M 4NH",
 					"addressLocality": "London",
 					"addressRegion": "GB",
 					"addressCountry": "UK"
