--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,15 +3,16 @@ main {}
 .intro>.ctnr {
     display: flex;
     flex-direction: column;
-    gap: clamp(2rem, 8vw, 7rem);
+    gap: clamp(1rem, 1vw, 7rem);
+    position: relative;
 }
 
 .intro>.ctnr .content {
     width: var(--base-width);
-    margin: clamp(2rem, 8vw, 6rem) auto 0;
+    margin: clamp(2rem, 6vw, 6rem) auto 0;
     display: flex;
     flex-direction: column;
-    gap: clamp(1rem, 3.5vmin, 1.8rem);
+    gap: clamp(1rem, 3vmin, 1.8rem);
 }
 
 .intro h1 {
@@ -52,12 +53,47 @@ main {}
     display: flex;
 }
 
+.scroll_bt {
+    position: absolute;
+    bottom: 3rem;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    width: 4rem;
+    height: 4rem;
+    box-sizing: border-box;
+    border: 0.2rem solid var(--light-b);
+    z-index: 3;
+    background-color: var(--light-d);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 -0.6rem 1.2rem -1rem var(--dark);
+    border-radius: 0.4rem;
+    -webkit-border-radius: 0.4rem;
+    -moz-border-radius: 0.4rem;
+    -ms-border-radius: 0.4rem;
+    -o-border-radius: 0.4rem;
+}
+
+.scroll_bt span {
+    display: inline-block;
+    border-bottom: 0.5rem solid var(--primary-a);
+    border-right: 0.5rem solid var(--primary-a);
+    border-top: 0.5rem solid transparent;
+    border-left: 0.5rem solid transparent;
+    transform: translateY(-0.25rem) rotate(45deg);
+    width: 0;
+    height: 0;
+}
+
 .panel_ctnr {
     background-color: var(--light-d);
     padding-block: clamp(2rem, 8vw, 5rem) clamp(2rem, 14vw, 6rem);
     display: flex;
     flex-direction: column;
     gap: clamp(4rem, 5vw, 5rem);
+    scroll-margin-top: var(--header-height);
 }
 
 .panel.services, .panel.sectors {
@@ -66,10 +102,14 @@ main {}
     border-radius: 1.2rem;
 }
 
+.panel h3 {
+    font-size: clamp(2rem, 11vw, 6.5rem);
+}
+
 .panel h3::after {
     content: '';
-    width: 2.5rem;
-    height: 3rem;
+    width: 2rem;
+    height: 2.5rem;
     display: inline-block;
     margin-left: 1rem;
     background-size: contain;
@@ -86,21 +126,51 @@ main {}
 }
 
 .panel .cta {
-    font-size: clamp(1.3rem, 5vmin, 2.2rem);
-    font-weight: 500;
+    font-size: clamp(1.3rem, 6vmin, 2.2rem);
+    font-weight: 600;
     letter-spacing: 0.05rem;
     width: fit-content;
     text-underline-offset: 0.7rem;
     line-height: 1.3;
-    margin-top: 0.6rem;
+    padding: 0.6rem 1.2rem;
+    transition: filter 0.3s ease;
+    -webkit-transition: filter 0.3s ease;
+    -moz-transition: filter 0.3s ease;
+    -ms-transition: filter 0.3s ease;
+    -o-transition: filter 0.3s ease;
 }
 
-.panel .content {
-    width: clamp(9rem, 80vw, 170rem);
+.services.panel .cta {
+    background-color: var(--light-d);
+}
+
+.sectors.panel .cta {
+    background-color: var(--primary-e);
+}
+
+.locations.panel .cta {
+    background-color: var(--highlight-a);
+}
+
+.panel .content, .panel .cta_ctnr {
+    width: clamp(9rem, 75vw, 170rem);
+}
+
+.panel .cta_ctnr {
+    margin-inline: auto;
+    position: sticky;
+    bottom: 3rem;
+    margin-block: 4rem;
 }
 
 .panel .cta:hover {
-    text-decoration: underline 0.2rem rgb(102 118 135 / 30%);
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+    transition: filter 0.1s ease;
+    -webkit-transition: filter 0.1s ease;
+    -moz-transition: filter 0.1s ease;
+    -ms-transition: filter 0.1s ease;
+    -o-transition: filter 0.1s ease;
 }
 
 .panel .subsets > div {
@@ -128,7 +198,7 @@ main {}
 
 .intro .text_block p {
     text-align: center;
-    max-width: 120rem;
+    max-width: 130rem;
     margin-inline: auto;
     line-height: 1.6;
     font-weight: 400;
@@ -304,7 +374,7 @@ section.testimonials {
 
 .testimonials .flex.center {
     position:relative;
-    margin: clamp(3rem, 14vw, 7rem) 0 clamp(2rem, 4vw, 4rem);
+    margin: clamp(3rem, 14vw, 7rem) 0 clamp(2rem, 4vw, 3rem);
 }
 
 .testimonials h3 {
@@ -373,6 +443,7 @@ section.testimonials {
     border: 0.1rem solid var(--light-a);
     position: relative;
     box-shadow: 0 1.5rem 2rem -1rem var(--light-d);
+    background-color: var(--light-d);
 }
 
 .testimonials .box>.ctnr::before {
@@ -447,7 +518,7 @@ section.testimonials {
     bottom: -0.2rem;
     width: 100%;
     height: 3rem;
-    background-image: linear-gradient(0deg, var(--light) 15%, transparent);
+    background-image: linear-gradient(0deg, var(--light-d) 15%, transparent);
 }
 
 .testimonials q::before, .testimonials q::after {
@@ -563,6 +634,7 @@ section.testimonials {
 section.find_us {
     background-color: var(--primary-a);
     color: var(--light);
+    padding-top: 2rem;
 }
 
 .find_us>.ctnr {
@@ -590,7 +662,7 @@ section.find_us {
 }
 
 .find_us .iframe_ctnr {
-    margin: 0 0 7rem;
+    margin: 0 0 5rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -672,11 +744,11 @@ section.find_us {
     .intro>.ctnr .content {
         margin: clamp(3rem, 9vmin, 9rem) auto clamp(3rem, 9vmin, 9rem) 0;
         width: unset;
-        max-width: clamp(40rem, 46vw, 75rem);
+        max-width: clamp(40rem, 43vw, 75rem);
     }
 
     .intro h1 {
-        font-size: clamp(4rem, calc(6vw - 2.6rem), 7rem);
+        font-size: clamp(3.6rem, calc(5.5vw - 2rem), 7rem);
         max-width: unset;
         line-height: 1.15;
     }
@@ -696,6 +768,13 @@ section.find_us {
     .showcase img {
         max-height: unset;
         display: flex;
+    }
+
+    .panel .cta_ctnr {
+        position: absolute;
+        margin-inline: clamp(4rem, 5vw, 8rem);
+        margin-block: 0;
+        bottom: calc(clamp(2rem,8vw,13rem) - 5rem);
     }
 
     .locations .image {
@@ -729,7 +808,7 @@ section.find_us {
     }
 
     .panel.services, .panel.sectors {
-        width: clamp(9rem, 95vw, 185rem);
+        width: var(--base-width);
     }
 
     .panel.services .image img, .panel.sectors .image img {
@@ -744,6 +823,10 @@ section.find_us {
         flex: 1;
         min-width: 25rem;
         max-width: 56rem;
+    }
+
+    section.find_us {
+        padding-top: unset;
     }
 
     .find_us .iframe_ctnr {
