--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -94,7 +94,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
                     </div>
                 </div>
 
-                <div class="subnav">
+                <!-- <div class="subnav">
                     <div class="flex">
                         <a href="/sectors/">Sectors</a>
 
@@ -128,7 +128,9 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
                             }
                         </div>
                     </div>
-                </div>
+                </div> -->
+
+                <a href="/sectors/">Sectors</a>
 
                 <a href="/locations/">Locations</a>
                 
@@ -234,7 +236,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
         top: 0;
         left: 0;
         right: 0;
-        height: clamp(1rem,18vmin,7.5rem);
+        height: var(--header-height);
         z-index: 4;
         background-image: linear-gradient(0deg, var(--primary-b) 0%, transparent 38% );
         border-bottom: 0.2rem solid var(--primary);
@@ -253,7 +255,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
         width: 100%;
         height: 100%;
         transform: translateX(-100%);
-        animation: shine 0.5s 0.8s linear 1;
+        animation: shine 0.6s 0.8s linear 1;
     }
 
     @keyframes shine {
@@ -285,8 +287,8 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
     }
 
     .hambt {
-        width: clamp(1rem,18vmin,7.5rem);
-        height:clamp(1rem,18vmin,7.5rem);
+        width: var(--header-height);
+        height:var(--header-height);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -338,7 +340,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
         position: absolute;
         overflow-y: scroll;
         font-weight: 600;
-        max-height: 62vh;
+        max-height: 68vh;
         bottom: -0.2rem;
         right: 0;
         background-image: linear-gradient(-140deg,var(--light),transparent 62%);
@@ -533,7 +535,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
 
         .shine_ctnr div {
             background-image: linear-gradient(50deg,transparent 20%,#fff4,transparent 80%);
-            animation: shine 0.5s 0.6s linear 1;
+            animation: shine 0.6s 0.8s linear 1;
         }
 
         header nav {
