--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -4,16 +4,6 @@
     background-image: linear-gradient(-30deg,var(--light-a),transparent 62%);
 }
 
-.panel .image:hover {
-    filter: brightness(1.1);
-    -webkit-filter: brightness(1.1);
-    transition: filter 0.2s ease;
-    -webkit-transition: filter 0.2s ease;
-    -moz-transition: filter 0.2s ease;
-    -ms-transition: filter 0.2s ease;
-    -o-transition: filter 0.2s ease;
-}
-
 main > .ctnr {
     margin-bottom: 9rem;
 }
@@ -28,10 +18,10 @@ h2 {
     font-size: clamp(1rem,4.2vmin,1.8rem);
     background-color: rgb(248 248 255 / 75%);
     position: sticky;
-    top: calc(clamp(1rem,18vmin,7.5rem) + 0.1rem);
+    top: calc(var(--header-height) + 0.1rem);
     padding: clamp(0.6rem,2vmin,1rem) 0.8rem 0.4rem 0;
     backdrop-filter: blur(0.3rem);
-    margin: 2rem 0 0 0.1rem;
+    margin: 0 0 0 0.1rem;
     border-radius: 0 0.3rem 0.3rem 0;
     box-shadow: 0 1rem 1rem -0.8rem rgb(248 248 255 / 40%);
     z-index: 2;
