--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -38,7 +38,7 @@ h2::after {
 }
 
 .panel > .ctnr {
-    flex-direction: column;
+    /* flex-direction: column; */
 }
 
 .panel .content {
@@ -50,7 +50,7 @@ h2::after {
     font-size: clamp(1.3rem,3.6vmin,1.8rem);
     color: var(--grey);
     line-height: 1.4;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .panel h3 {
@@ -131,20 +131,20 @@ h2::after {
 }
 
 .division h2 + p {
-    font-size: clamp(1.5rem, 4vmin, 1.7rem);
-    color: var(--grey);
+    font-size: clamp(1.5rem, 3.8vmin, 1.7rem);
+    color: var(--primary-a);
     font-weight: 400;
     line-height: 1.4;
-    margin: 0.4rem 0 1.6rem;
+    margin: 0.2rem 0 1.6rem;
 }
 
 .panel .main.cta {
     text-align: right;
     padding: clamp(0.9rem,2.5vw,1.4rem) 1.4rem;
-    position: absolute;
+    /* position: absolute;
     left: 1.5rem;
     right: 1.5rem;
-    bottom: 1.5rem;
+    bottom: 1.5rem; */
     text-align: center;
     backdrop-filter: blur(0.3rem);
     z-index: 1;
@@ -161,11 +161,11 @@ h2::after {
 }
 
 .panel .image img {
-    border-radius: 0 0 1.2rem 1.2rem;
-    -webkit-border-radius: 0 0 1.2rem 1.2rem;
-    -moz-border-radius: 0 0 1.2rem 1.2rem;
-    -ms-border-radius: 0 0 1.2rem 1.2rem;
-    -o-border-radius: 0 0 1.2rem 1.2rem;
+    border-radius: 1.2rem 1.2rem 0 0;
+    -webkit-border-radius: 1.2rem 1.2rem 0 0;
+    -moz-border-radius: 1.2rem 1.2rem 0 0;
+    -ms-border-radius: 1.2rem 1.2rem 0 0;
+    -o-border-radius: 1.2rem 1.2rem 0 0;
 }
 
 .heading_ctnr {
@@ -231,6 +231,7 @@ h2::after {
         left: unset;
         bottom: 2.5rem;
         box-shadow: inset 0 -1.2rem 2rem -1.8rem #fff, 0 0.8rem 1rem -0.6rem rgb(47 54 60 / 50%);
+        position: absolute;
     }
 
     .panel .quote:hover {
