--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -31,8 +31,8 @@ main {}
 }
 
 .intro h2 b, .intro h2 strong {
-    font-weight: 500;
-    color: var(--dark-a);
+    font-weight: inherit;
+    color: var(--dark);
 }
 
 .intro h2 .highlight {
@@ -755,18 +755,18 @@ section.find_us {
     .intro>.ctnr .content {
         margin: clamp(3rem, 9vmin, 9rem) auto clamp(3rem, 9vmin, 9rem) 0;
         width: unset;
-        max-width: clamp(40rem, 43vw, 75rem);
+        max-width: clamp(40rem, 47vw, 78rem);
     }
 
     .intro h1 {
-        font-size: clamp(3.6rem, calc(5.5vw - 2rem), 7rem);
+        font-size: clamp(3.8rem, calc(5.2vw - 1rem), 7rem);
         max-width: unset;
         line-height: 1.15;
     }
 
     .intro h2 {
-        font-size: clamp(1.6rem, calc(6vmin - 2.6rem), 1.9rem);
-        max-width: clamp(10rem, 85%, 62rem);
+        font-size: clamp(1.9rem, calc(4.8vw - 2.6rem), 2rem);
+        max-width: clamp(10rem, 94%, 74rem);
         line-height: 1.6;
     }
 
