--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -23,9 +23,9 @@ main {}
 }
 
 .intro h2 {
-    font-size: clamp(1rem, 4vmin, 2.2rem);
+    font-size: clamp(1rem, 4.5vmin, 2.2rem);
     font-weight: 400;
-    line-height: 1.4;
+    line-height: 1.5;
     max-width: 95%;
     color: var(--grey-b);
 }
@@ -61,18 +61,18 @@ main {}
     width: 4rem;
     height: 4rem;
     box-sizing: border-box;
-    border: 0.2rem solid var(--light-b);
+    border: 0.1rem solid var(--light-b);
     z-index: 3;
-    background-color: var(--light-d);
+    background-color: var(--light-a);
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 -0.6rem 1.2rem -1rem var(--dark);
-    border-radius: 0.4rem;
-    -webkit-border-radius: 0.4rem;
-    -moz-border-radius: 0.4rem;
-    -ms-border-radius: 0.4rem;
-    -o-border-radius: 0.4rem;
+    box-shadow: inset 0 0.8rem 1.5rem -1.1rem var(--dark);
+    border-radius: 3rem;
+    -webkit-border-radius: 3rem;
+    -moz-border-radius: 3rem;
+    -ms-border-radius: 3rem;
+    -o-border-radius: 3rem;
 }
 
 .scroll_bt span {
