--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ import { FOOTER_DESCRIPTION, STREET, LONDON_PHONE_NO } from "../consts";
             <a href="/"><span></span>Home</a>
             <a href="/services/"><span></span>Services</a>
             <a href="/sectors/"><span></span>Sectors</a>
-            <a href="/locations/"><span></span>Locations</a>
+            <a href="/locations/"><span></span>Location</a>
             <a href="/about/"><span></span>About</a>
             <a href="/contact/"><span></span>Contact</a>
         </nav>
