--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -132,7 +132,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
 
                 <a href="/sectors/">Sectors</a>
 
-                <a href="/locations/">Locations</a>
+                <a href="/locations/">Location</a>
                 
                 <a href="/about/">About</a>
 
