--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -61,9 +61,9 @@ main {}
     width: 4rem;
     height: 4rem;
     box-sizing: border-box;
-    border: 0.1rem solid var(--light-b);
+    border: 0.2rem solid var(--light-a);
     z-index: 3;
-    background-color: var(--light-a);
+    background-color: var(--light);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -182,36 +182,26 @@ main {}
 
 .benefits {
     background-color: var(--highlight);
-    padding: clamp(3rem, 10vmin, 6rem) 0;
+    padding: clamp(3rem, 10vmin, 5rem) 0 clamp(3rem, 10vmin, 6rem);
     color: var(--light);
     font-size: clamp(1.5rem, 4vmin, 2.2rem);
-    background-image: linear-gradient(340deg, #ff9162, transparent 38%);
-    overflow: hidden;
-    position: relative;
+    /* overflow: hidden;
+    position: relative; */
 }
 
 .benefits>.ctnr {
-    /* width: var(--base-width);
+    width: var(--base-width);
     margin-inline: auto;
-    max-width: 100%; */
-}
-
-.benefits p {
-    /* text-align: center;
-    max-width: 130rem;
-    margin-inline: auto;
-    line-height: 1.6;
-    font-weight: 400; */
+    max-width: 100%;
 }
 
 .benefits h3 {
     margin-inline: auto;
-    font-size: clamp(2rem, 10vmin, 3.5rem);
+    font-size: clamp(2rem, 7vmin, 3.5rem);
     text-align: center;
     font-weight: 500;
     width: fit-content;
     padding: 0.4rem 1rem;
-    max-width: 70vw;
     margin-bottom: 1rem;
 }
 
@@ -221,29 +211,66 @@ main {}
     width: var(--base-width);
     margin-inline: auto;
     font-size: 2rem;
-    margin-bottom: 3rem;
+}
+
+.benefits .bullets {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: stretch;
+    gap:3.5rem;
+    margin-block: clamp(3rem, 4vw, 5rem) clamp(3rem, 4vw, 4rem);
 }
 
 .benefits .box {
-    width: clamp(9rem, 95vw, 60rem);
+    width: clamp(9rem, 85vw, 33rem);
     text-align: center;
+    padding: 3rem 2.5rem 2.5rem;
+    border-radius: 1.2rem;
+    background-color: #ff7e47;
+    position: relative;
+    /*border: 0.1rem solid #FF8E57;
+    */box-sizing: border-box;
+    background-image: linear-gradient(340deg, #ff9162, transparent 38%);
+    transition: background-color 0.4s ease;
+    -webkit-transition: background-color 0.4s ease;
+    -moz-transition: background-color 0.4s ease;
+    -ms-transition: background-color 0.4s ease;
+    -o-transition: background-color 0.4s ease;
+}
+
+.benefits .box:hover {
+    background-color: #FF864F;
+    transition: background-color 0.06s ease;
+    -webkit-transition: background-color 0.06s ease;
+    -moz-transition: background-color 0.06s ease;
+    -ms-transition: background-color 0.06s ease;
+    -o-transition: background-color 0.06s ease;
 }
 
 .benefits .box .icon {
-    width: clamp(2rem, 10vw, 5rem);
-    margin: -6rem 0 1rem;
+    width: clamp(2rem, 11vw, 4.2rem);
+    height: clamp(2rem, 8vw, 3rem);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    transform: translateY(-50%);
 }
 
 .benefits .box .title {
-    font-size: clamp(2.8rem, 6vw, 3.2rem);
-    color: var(--highlight-a);
+    font-size: clamp(1.8rem, 5vw, 2rem);
+    font-weight: 400;
+    line-height: 1.4;
+}
+
+.benefits .box .title b, .benefits .box .title strong {
     font-weight: 500;
-    margin-bottom: 1rem;
-    margin-inline: auto;
 }
 
 .benefits .box p {
-    font-size: clamp(1.6rem, 3.8vmin, 1.7rem);
+    font-size: clamp(1.2rem, 3.8vmin, 1.6rem);
     margin-bottom: 1rem;
     line-height: 1.4;
 }
@@ -257,7 +284,27 @@ main {}
     color: var(--dark-a);
 }
 
-.benefits b, .benefits strong {
+.benefits .main.cta {
+    display: block;
+    margin-inline: auto;
+    width: fit-content;
+    margin-top: 3rem;
+    background-color: var(--light-a);
+    color: var(--highlight);
+    text-shadow: unset;
+    border: 0.2rem solid var(--light-b);
+    width: clamp(9rem, 89vw, 37rem);
+    box-sizing: border-box;
+    position: sticky;
+    bottom: 2rem;
+    border-radius: 0.6rem;
+    -webkit-border-radius: 0.6rem;
+    -moz-border-radius: 0.6rem;
+    -ms-border-radius: 0.6rem;
+    -o-border-radius: 0.6rem;
+}
+
+.benefits h3 + p b, .benefits h3 + p strong {
     font-weight: 500;
     background-color: var(--highlight-a);
 }
@@ -853,6 +900,25 @@ section.find_us {
         margin-inline: clamp(4rem, 5vw, 8rem);
         margin-block: 0;
         bottom: calc(clamp(2rem,8vw,13rem) - 5rem);
+    }
+
+    .benefits .bullets {
+        gap: 2rem;
+    }
+
+    .benefits .box {
+        flex: 1;
+        width: unset;
+        min-width: clamp(22rem, 16vw, 30rem);
+        max-width: 33rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-block: clamp(1rem, 1.8vw, 3rem);
+    }
+
+    .benefits .main.cta {
+        position: static;
     }
 
     .locations .image {
